# Winux-PTree

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  architectural_fixes.md  perf.data  ptree.idx
.github/workflows/: rust.yml
Driver/: Cargo.toml
Driver/src/: error.rs  lib.rs  main.rs  registration.rs  service.rs  usn_journal.rs
benches/: force_traversal.txt  traversal_benchmarks.rs
crates/ptree-cache/: Cargo.toml
crates/ptree-cache/src/: cache.rs  cache_lazy.rs  cache_limcode.rs  cache_mmap.rs  cache_opt.rs  cache_rkyv.rs  lib.rs
crates/ptree-core/: Cargo.toml
crates/ptree-core/src/: cli.rs  error.rs  lib.rs
crates/ptree-incremental/: Cargo.toml
crates/ptree-incremental/src/: incremental.rs  lib.rs
crates/ptree-scheduler/: Cargo.toml
crates/ptree-scheduler-unix/: Cargo.toml
crates/ptree-scheduler-unix/src/: lib.rs
crates/ptree-scheduler-windows/: Cargo.toml
crates/ptree-scheduler-windows/src/: lib.rs
crates/ptree-scheduler/src/: lib.rs  scheduler.rs
crates/ptree-traversal/: Cargo.toml
crates/ptree-traversal/src/: lib.rs  traversal.rs
docs/: COLORED_OUTPUT.md  COLORED_OUTPUT_QUICKSTART.md  DOCUMENTATION_CLEANUP.md  START_HERE.md  USAGE_EXAMPLES.md
scripts/: generate_test_file_dirs.py  install-linux.sh  ptree-auto-update.sh  ptree-driver-loop.sh  ptree-update-prompt-launch.sh  update-driver.sh
scripts/linux/: install-linux.sh  ptree-auto-update.sh  ptree-driver-loop.sh  update-driver.sh
scripts/linux/systemd/: ptree-auto-update.service  ptree-auto-update.timer  ptree-driver.service
scripts/systemd/: ptree-auto-update-sleep-hook.sh  ptree-auto-update-wake.service
scripts/windows/: install-windows.ps1  update-driver.ps1
src/: cache.rs  main.rs  traversal.rs
tools/ptree-update-prompt/: .gitignore  Cargo.toml
tools/ptree-update-prompt/src/: main.rs
