[workspace]
members = [".", "crates/ptree-core", "crates/ptree-cache", "crates/ptree-scheduler", "crates/ptree-traversal", "crates/ptree-incremental"]

[package]
name = "ptree"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ptree"
path = "src/main.rs"

[dependencies]
ptree-core = { path = "crates/ptree-core" }
ptree-cache = { path = "crates/ptree-cache", default-features = false, features = ["std"] }
ptree-traversal = { path = "crates/ptree-traversal", default-features = false, features = ["std"] }
ptree-scheduler = { path = "crates/ptree-scheduler", optional = true }
ptree-incremental = { path = "crates/ptree-incremental", optional = true }

anyhow = "1.0"
atty = "0.2"

[features]
default = ["scheduler"]
scheduler = ["ptree-scheduler"]
incremental = ["ptree-incremental"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "traversal_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
