[package]
name = "ptree-cache"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
rayon = "1.8"
anyhow = "1.0"
parking_lot = "0.12"
memmap2 = "0.9"
rkyv = { version = "0.7", features = ["validation"] }

[features]
default = ["std"]
std = []
